[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "parseltongue"
version = "1.6.5"
authors = [
    {name = "Claude", email = "claude@anthropic.com"},
]
description = "Python development suite with specialized expertise in testing, performance, async, and packaging"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "psutil>=5.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.0.0",
    "black>=26.1.0",
    "ruff>=0.14.13",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/parseltongue"
Documentation = "https://parseltongue.readthedocs.io/"
Repository = "https://github.com/anthropics/parseltongue.git"
"Bug Tracker" = "https://github.com/anthropics/parseltongue/issues"

[project.scripts]
parseltongue = "parseltongue.cli:main"

# [tool.setuptools_scm]
# write_to = "parseltongue/_version.py"

[tool.setuptools.packages.find]
# where = ["src"]
include = ["parseltongue*"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=parseltongue",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests for individual functions and methods",
    "integration: Integration tests for workflows and end-to-end scenarios",
    "slow: Tests that take longer than 1 second to run",
    "performance: Performance and scalability tests",
    "asyncio: Async-focused tests",
    "testing: Testing-focused tests",
    "packaging: Packaging-focused tests",
    "language_detection: Language detection tests",
    "edge_case: Edge case and boundary condition tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["parseltongue"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
    "parseltongue/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
fail_under = 85
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-ignore = ["S101"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
# POLICY: Fix lint issues in code, do NOT add bulk ignores here.
# Only add an ignore rule after exhausting refactoring options and
# getting explicit reviewer approval. Never ignore C901, PLR0912,
# PLR0915, or SIM102 -- refactor the code instead.
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "PLW0603", # using the global statement
]
unfixable = [
    "B006",   # Do not use mutable data structures for argument defaults
    "RUF001", # Remove ambiguous unicode character
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ARG001",  # Unused function args in tests
    "ARG002",  # Unused method args in tests
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "D102",    # Missing method docstrings in test classes
    "D103",    # Missing function docstrings in tests
    "S108",    # Allow hardcoded temp paths in tests
    "PLC0415", # Allow conditional imports
    "D205",    # Multiline docstring summary (Given/When/Then patterns)
    "ERA001",  # BDD-style comments (Given/When/Then) misdetected as commented code
]
"__init__.py" = [
    "F401",   # Unused import
]
# Skill modules are single-class files with many analysis methods.
# Split into packages if any file exceeds 1500 LOC.
"parseltongue/skills/async_analysis.py" = [
    "PLR0904", # Too many public methods - single analysis class
]
"parseltongue/skills/pattern_matching.py" = [
    "PLR0904", # Too many public methods - single pattern recognition class
]
"parseltongue/skills/testing_guide.py" = [
    "PLR0904", # Too many public methods - single guide class
]
"parseltongue/skills/language_detection.py" = [
    "PLR0904", # Too many public methods - single detection class
]

[tool.ruff.lint.pylint]
max-public-methods = 20

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "pytest.*",
]
ignore_missing_imports = true
