[project]
name = "sanctum"
version = "1.6.5"
description = "Sanctum Claude Code plugin - Git and workspace operations for active development workflows"
authors = [{name = "Claude Skills", url = "https://github.com/superpowers-marketplace"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "mypy>=1.11.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanctum"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "PL", "D"]
extend-ignore = ["E203", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "D"]
"tests/test_do_issue_module_docs.py" = ["S101", "D", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.9"
extraPaths = ["src", "scripts", "hooks"]
exclude = [".venv", ".uv-cache", "**/__pycache__"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = ["src"]
exclude = ['^\.venv', '^\.uv-cache']

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["scripts", "hooks", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/sanctum",
    "--cov=hooks",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interaction",
    "slow: Tests that take more than a few seconds",
    "git: Tests that require Git operations",
    "bdd: Behavior-Driven Development style tests",
    "requires_notify_send: Tests that require notify-send command to be installed",
    "benchmark: Performance benchmark tests",
]

[tool.coverage.run]
source = ["src/sanctum", "hooks"]
omit = ["tests/*", "*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
